我的小店导航页~

--- a/shop/index.html
+++ b/shop/index.html
@@ -31,6 +31,14 @@
                             <li><a href="">男士护理</a></li>
                             <li><a href="">个人护理</a></li>
                         </ul>
+                        <ul>
+                            <li><a href="">洁面</a></li>
+                            <li><a href="">化妆水</a></li>
+                            <li><a href="">乳液</a></li>
+                            <li><a href="">精华</a></li>
+                            <li><a href="">面膜</a></li>
+                            <li><a href="">面霜</a></li>
+                        </ul>
                     </div>
                 </li>
                 <li><a href="">特卖专场</a></li>
