--- a/shop/index.html
+++ b/shop/index.html
@@ -18,6 +18,7 @@
                     <span>购物车：$0.00(0件)</span>
                     <img src="img/cart.png" alt="" title="购物车"/>
                 </div>
+                <p>清空购物车</p>
             </div>
             <ul id="nav">
                 <li class="selected"><a href="">首页</a></li>
@@ -48,13 +49,34 @@
             </ul>
         </div>
     </div>
-    <hr style="margin-top: 10px;">
+    <!--<hr style="margin-top: 10px;">-->
     <div id="new-product">
         <div class="wrapper">
-
+            <div class="sale bg1">
+                <h4>特卖专场</h4>
+            </div>
+            <div class="sale bg2">
+                <h4>新品上市</h4>
+            </div>
+            <div class="sale bg3">
+                <h4>进口免税</h4>
+        </div>
         </div>
     </div>
-    <div id="product"></div>
+    <div id="product">
+        <div class="wrapper">
+            <div class="product-info">
+                <img src="" alt=""/>
+                <span>NEW</span>
+                <div class="product-detail">
+                    <h4>美宝莲好气色轻唇膏</h4>
+                    <h4>￥136.00</h4>
+                    <input type="text" value="1"/><br>
+                    <button class="add">添加到购物车</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="problem"></div>
     <div id="footer"></div>
 
