我的小店导航页~ product页 problem页

--- a/shop/index.html
+++ b/shop/index.html
@@ -66,8 +66,58 @@
     <div id="product">
         <div class="wrapper">
             <div class="product-info">
-                <img src="" alt=""/>
-                <span>NEW</span>
+                <img src="img/bs1.jpg" alt=""/>
+                <span class="new">NEW</span>
+                <div class="product-detail">
+                    <h4>美宝莲好气色轻唇膏</h4>
+                    <h4>￥136.00</h4>
+                    <input type="text" value="1"/><br>
+                    <button class="add">添加到购物车</button>
+                </div>
+            </div>
+            <div class="product-info">
+                <img src="img/bs2.jpg" alt=""/>
+                <span class="new">NEW</span>
+                <div class="product-detail">
+                    <h4>美丽法则恒彩水润唇膏口红笔</h4>
+                    <h4>￥187.95</h4>
+                    <input type="text" value="1"/><br>
+                    <button class="add">添加到购物车</button>
+                </div>
+            </div>
+            <div class="product-info">
+                <img src="img/bs3.jpg" alt=""/>
+                <span class="new">NEW</span>
+                <div class="product-detail">
+                    <h4>甜蜜奶油精华保湿软芯唇膏</h4>
+                    <h4>￥220.95</h4>
+                    <input type="text" value="1"/><br>
+                    <button class="add">添加到购物车</button>
+                </div>
+            </div>
+            <div class="product-info">
+                <img src="img/bs4.jpg" alt=""/>
+                <span class="new">NEW</span>
+                <div class="product-detail">
+                    <h4>美宝莲好气色轻唇膏</h4>
+                    <h4>￥136.00</h4>
+                    <input type="text" value="1"/><br>
+                    <button class="add">添加到购物车</button>
+                </div>
+            </div>
+            <div class="product-info">
+                <img src="img/bs5.jpg" alt=""/>
+                <span class="new">NEW</span>
+                <div class="product-detail">
+                    <h4>美宝莲好气色轻唇膏</h4>
+                    <h4>￥136.00</h4>
+                    <input type="text" value="1"/><br>
+                    <button class="add">添加到购物车</button>
+                </div>
+            </div>
+            <div class="product-info">
+                <img src="img/bs6.jpg" alt=""/>
+                <span class="new">NEW</span>
                 <div class="product-detail">
                     <h4>美宝莲好气色轻唇膏</h4>
                     <h4>￥136.00</h4>
@@ -76,9 +126,45 @@
                 </div>
             </div>
         </div>
+        </div>
     </div>
-    <div id="problem"></div>
-    <div id="footer"></div>
+    <div id="problem">
+      <div class="wrapper">
+          <ul class="problem-menu">
+              <li><a href="" class="menu-bold">购物指南</a></li>
+              <li><a href="">用户协议</a></li>
+              <li><a href="">服务协议</a></li>
+              <li><a href="">优惠券使用</a></li>
+          </ul>
+          <ul class="problem-menu">
+              <li><a href="" class="menu-bold">购物指南</a></li>
+              <li><a href="">用户协议</a></li>
+              <li><a href="">服务协议</a></li>
+              <li><a href="">优惠券使用</a></li>
+          </ul>
+          <ul class="problem-menu">
+              <li><a href="" class="menu-bold">购物指南</a></li>
+              <li><a href="">用户协议</a></li>
+              <li><a href="">服务协议</a></li>
+              <li><a href="">优惠券使用</a></li>
+          </ul>
+          <ul class="problem-menu">
+              <li><a href="" class="menu-bold">购物指南</a></li>
+              <li><a href="">用户协议</a></li>
+              <li><a href="">服务协议</a></li>
+              <li><a href="">优惠券使用</a></li>
+          </ul>
+          <ul class="problem-menu">
+              <li><a href="" class="menu-bold">购物指南</a></li>
+              <li><a href="">用户协议</a></li>
+              <li><a href="">服务协议</a></li>
+              <li><a href="">优惠券使用</a></li>
+          </ul>
+      </div>
+    </div>
+    <div id="footer">
+
+    </div>
 
 </body>
 </html>
