--- a/shop/index.html
+++ b/shop/index.html
@@ -163,7 +163,10 @@
       </div>
     </div>
     <div id="footer">
-
+        <div class="wrapper">
+            <h3>我的小店</h3>
+            <h4>Copyright © 2017.我的小店</h4>
+        </div>
     </div>
 
 </body>
