我的小店导航页~ product页 problem页 修改bug

--- a/shop/index.html
+++ b/shop/index.html
@@ -137,19 +137,18 @@
               <li><a href="">优惠券使用</a></li>
           </ul>
           <ul class="problem-menu">
-              <li><a href="" class="menu-bold">购物指南</a></li>
-              <li><a href="">用户协议</a></li>
-              <li><a href="">服务协议</a></li>
-              <li><a href="">优惠券使用</a></li>
+              <li><a href="" class="menu-bold">购物/付款</a></li>
+              <li><a href="">购物流程</a></li>
+              <li><a href="">付款流程</a></li>
+              <li><a href="">付款方式</a></li>
           </ul>
           <ul class="problem-menu">
-              <li><a href="" class="menu-bold">购物指南</a></li>
-              <li><a href="">用户协议</a></li>
-              <li><a href="">服务协议</a></li>
-              <li><a href="">优惠券使用</a></li>
+              <li><a href="" class="menu-bold">配送方式</a></li>
+              <li><a href="">配送范围</a></li>
+              <li><a href="">配送说明</a></li>
           </ul>
           <ul class="problem-menu">
-              <li><a href="" class="menu-bold">购物指南</a></li>
+              <li><a href="" class="menu-bold">常见问题</a></li>
               <li><a href="">用户协议</a></li>
               <li><a href="">服务协议</a></li>
               <li><a href="">优惠券使用</a></li>
