登录界面和品牌特卖

--- a/shop/index.html
+++ b/shop/index.html
@@ -42,7 +42,7 @@
                         </ul>
                     </div>
                 </li>
-                <li><a href="">特卖专场</a></li>
+                <li><a href="special-sale.html">特卖专场</a></li>
                 <li><a href="">新品上市</a></li>
                 <li><a href="">潮人推荐</a></li>
                 <li><a href="">进口免税店</a></li>
