登录界面和品牌特卖大体完成~

--- a/shop/special-sale.html
+++ b/shop/special-sale.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <div id="main-header">
             <div id="login"  class="float">
-                <a href="http://www.baidu.com" target="_blank">登录</a>
+                <a href="login.html" target="_blank">登录</a>
             </div>
             <h1 class="float">我的小店</h1>
             <div id="cart" class="float">
@@ -21,7 +21,7 @@
             <p>清空购物车</p>
         </div>
         <ul id="nav">
-            <li class="selected"><a href="">首页</a></li>
+            <li class="selected"><a href="index.html">首页</a></li>
             <li id="makeup">
                 <a href="">美妆商城</a>
                 <div id="submenu">
