--- a/shop/login.html
+++ b/shop/login.html
@@ -21,7 +21,7 @@
             <p>清空购物车</p>
         </div>
         <ul id="nav">
-            <li class="selected"><a href="">首页</a></li>
+            <li class="selected"><a href="index.html">首页</a></li>
             <li id="makeup">
                 <a href="">美妆商城</a>
                 <div id="submenu">
@@ -42,7 +42,7 @@
                     </ul>
                 </div>
             </li>
-            <li><a href="">特卖专场</a></li>
+            <li><a href="special-sale.html">特卖专场</a></li>
             <li><a href="">新品上市</a></li>
             <li><a href="">潮人推荐</a></li>
             <li><a href="">进口免税店</a></li>
@@ -62,17 +62,23 @@
                     <input type="password"/>
                 </label>
                 <br/>
-                <input type="submit"value="Login"/>
+                <input type="submit" value="Login" class="btn"/>
                 <br/>
-                <a href="">忘记密码</a>
+                <a href="" id="forget">忘记密码</a>
             </form>
             <div id="register">
                 <h3>没有账号？</h3>
                 <p>
                     建立一个账号，享受更流畅的服务。期待您的加入，与我们一起变美丽。么么哒！！！ 小美妞们，快来吧。啦啦啦！！！
                 </p>
-                <button>新用户注册</button>
+                <button class="btn">新用户注册</button>
             </div>
+        </div>
+    </div>
+    <div id="footer">
+        <div class="wrapper">
+            <h3><a href="index.html">我的小店</a></h3>
+            <h4>Copyright © 2017.我的小店</h4>
         </div>
     </div>
 </body>
