--- a/shop/login.html
+++ b/shop/login.html
@@ -71,7 +71,7 @@
                 <p>
                     建立一个账号，享受更流畅的服务。期待您的加入，与我们一起变美丽。么么哒！！！ 小美妞们，快来吧。啦啦啦！！！
                 </p>
-                <button class="btn">新用户注册</button>
+                <button class="btn"><a href="register.html">新用户注册</a></button>
             </div>
         </div>
     </div>
