--- a/shop/index.html
+++ b/shop/index.html
@@ -10,15 +10,14 @@
     <div id="header">
         <div class="wrapper">
             <div id="main-header">
-                <div id="login"  class="float">
+                <div id="login" class="float">
                     <a href="login.html">登录</a>
                 </div>
                 <h1 class="float">我的小店</h1>
                 <div id="cart" class="float">
-                    <span>购物车：$0.00(0件)</span>
-                    <img src="img/cart.png" alt="" title="购物车"/>
+                    <a href="cart.html">购物车：￥<span id="total-price">0.00</span>(<span id="total-num">0</span>件)</a>
                 </div>
-                <p>清空购物车</p>
+                <p id="clear-cart">清空购物车</p>
             </div>
             <ul id="nav">
                 <li class="selected"><a href="">首页</a></li>
@@ -70,7 +69,7 @@
                 <span class="new">NEW</span>
                 <div class="product-detail">
                     <h4>美宝莲好气色轻唇膏</h4>
-                    <h4>￥136.00</h4>
+                    <h4>￥<span class="price">136.00</span></h4>
                     <input type="text" value="1"/><br>
                     <button class="add">添加到购物车</button>
                 </div>
@@ -80,7 +79,7 @@
                 <span class="new">NEW</span>
                 <div class="product-detail">
                     <h4>美丽法则恒彩水润唇膏口红笔</h4>
-                    <h4>￥187.95</h4>
+                    <h4>￥<span class="price">187.95</span></h4>
                     <input type="text" value="1"/><br>
                     <button class="add">添加到购物车</button>
                 </div>
@@ -90,7 +89,7 @@
                 <span class="new">NEW</span>
                 <div class="product-detail">
                     <h4>甜蜜奶油精华保湿软芯唇膏</h4>
-                    <h4>￥220.95</h4>
+                    <h4>￥<span class="price">220.00</span></h4>
                     <input type="text" value="1"/><br>
                     <button class="add">添加到购物车</button>
                 </div>
@@ -100,7 +99,7 @@
                 <span class="new">NEW</span>
                 <div class="product-detail">
                     <h4>美宝莲好气色轻唇膏</h4>
-                    <h4>￥136.00</h4>
+                    <h4>￥<span class="price">196.00</span></h4>
                     <input type="text" value="1"/><br>
                     <button class="add">添加到购物车</button>
                 </div>
@@ -110,7 +109,7 @@
                 <span class="new">NEW</span>
                 <div class="product-detail">
                     <h4>美宝莲好气色轻唇膏</h4>
-                    <h4>￥136.00</h4>
+                    <h4>￥<span class="price">136.00</span></h4>
                     <input type="text" value="1"/><br>
                     <button class="add">添加到购物车</button>
                 </div>
@@ -120,7 +119,7 @@
                 <span class="new">NEW</span>
                 <div class="product-detail">
                     <h4>美宝莲好气色轻唇膏</h4>
-                    <h4>￥136.00</h4>
+                    <h4>￥<span class="price">136.00</span></h4>
                     <input type="text" value="1"/><br>
                     <button class="add">添加到购物车</button>
                 </div>
@@ -168,5 +167,6 @@
         </div>
     </div>
 
+    <script src="javascript/index.js"></script>
 </body>
 </html>
